--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ passenv = ARCHFLAGS LDFLAGS CFLAGS INCLUDE LIB LD_LIBRARY_PATH USERNAME SOFTHSM2
 commands =
     pip list
     # run only the tests for pkcs11
-    coverage run --parallel-mode -m pytest --capture=no --strict --backend=pkcs11 cryptography/tests {posargs}
+    coverage run --parallel-mode -m pytest --capture=no --strict --backend=pkcs11 cryptography/tests/ -k"TestAESModeECB or TestAESModeCBC or TestTripleDESModeCBC or TestTripleDESModeECB" {posargs}
     coverage combine
     coverage report -m
 
