hmacbackend support and other things

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ passenv = ARCHFLAGS LDFLAGS CFLAGS INCLUDE LIB LD_LIBRARY_PATH USERNAME SOFTHSM2
 commands =
     pip list
     # run only the tests for pkcs11
-    coverage run --parallel-mode -m pytest --capture=no --strict --backend=pkcs11 cryptography/tests/ -k"TestAESModeECB or TestAESModeCBC or TestTripleDESModeCBC or TestTripleDESModeECB" {posargs}
+    coverage run --parallel-mode -m pytest --capture=no --strict --backend=pkcs11 cryptography/tests/ -k"TestAESModeECB or TestAESModeCBC or TestTripleDESModeCBC or TestTripleDESModeECB or TestHMACMD5 or TestHMACSHA1 or TestHMACSHA224 or TestHMACSHA256 or TestHMACSHA384 or TestHMACSHA512 or TestMD5 or TestSHA1 or TestSHA224 or TestSHA256 or TestSHA384 or TestSHA512" {posargs}
     coverage combine
     coverage report -m
 
