--- a/tox.ini
+++ b/tox.ini
@@ -14,9 +14,12 @@ deps =
 passenv = ARCHFLAGS LDFLAGS CFLAGS INCLUDE LIB LD_LIBRARY_PATH USERNAME SOFTHSM2_CONF CRYPTOGRAPHY_PKCS11_PATH CRYPTOGRAPHY_PKCS11_SLOT_ID CRYPTOGRAPHY_PKCS11_FLAGS CRYPTOGRAPHY_PKCS11_USER_TYPE CRYPTOGRAPHY_PKCS11_PASSWORD
 commands =
     pip list
-    # run only the tests for pkcs11
-    coverage run --parallel-mode -m pytest --capture=no --strict --backend=pkcs11 cryptography/tests/ -k"TestAESModeECB or TestAESModeCBC or TestTripleDESModeCBC or TestTripleDESModeECB or TestHMACMD5 or TestHMACSHA1 or TestHMACSHA224 or TestHMACSHA256 or TestHMACSHA384 or TestHMACSHA512" {posargs}
+    # run only the tests for pkcs11, and only a subset. prepare for a lot of invocations!
+    coverage run --parallel-mode -m pytest --capture=no --strict --backend=pkcs11 cryptography/tests/hazmat/primitives/test_aes.py -k"TestAESModeECB or TestAESModeCBC" {posargs}
+    coverage run --parallel-mode -m pytest --capture=no --strict --backend=pkcs11 cryptography/tests/hazmat/primitives/test_3des.py {posargs}
     coverage run --parallel-mode -m pytest --capture=no --strict --backend=pkcs11 cryptography/tests/hazmat/primitives/test_hash_vectors.py {posargs}
+    coverage run --parallel-mode -m pytest --capture=no --strict --backend=pkcs11 cryptography/tests/hazmat/primitives/test_hmac_vectors.py {posargs}
+    coverage run --parallel-mode -m pytest --capture=no --strict --backend=pkcs11 cryptography/tests/hazmat/primitives/test_rsa.py -k"not test_pss_minimum_key_size_for_digest and not test_pss_verify_salt_length_too_long and not test_pss_signing_salt_length_too_long" {posargs}
     coverage combine
     coverage report -m
 
