--- a/tox.ini
+++ b/tox.ini
@@ -23,11 +23,21 @@ commands =
     coverage combine
     coverage report -m
 
+[testenv:docs]
+deps =
+    .[docs-test]
+basepython = python2.7
+commands =
+    sphinx-build -W -b html -d {envtmpdir}/doctrees docs docs/_build/html
+    sphinx-build -W -b latex -d {envtmpdir}/doctrees docs docs/_build/latex
+    sphinx-build -W -b doctest -d {envtmpdir}/doctrees docs docs/_build/html
+    sphinx-build -W -b spelling docs docs/_build/html
+    doc8 --allow-long-titles README.rst CHANGELOG.rst docs/ --ignore-path docs/_build/
+    python setup.py check --restructuredtext --strict
+
 [testenv:pep8]
 deps =
-    flake8
-    flake8-importorder
-    pep8-naming
+    .[pep8-test]
 commands =
     flake8 .
 
