--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ commands =
     # run only the tests for pkcs11, and only a subset. prepare for a lot of invocations!
     coverage run --parallel-mode -m pytest --capture=no --strict --backend=pkcs11 cryptography/tests/hazmat/primitives/test_aes.py -k"TestAESModeECB or TestAESModeCBC" {posargs}
     coverage run --parallel-mode -m pytest --capture=no --strict --backend=pkcs11 cryptography/tests/hazmat/primitives/test_3des.py {posargs}
+    coverage run --parallel-mode -m pytest --capture=no --strict --backend=pkcs11 cryptography/tests/hazmat/primitives/test_block.py {posargs}
     coverage run --parallel-mode -m pytest --capture=no --strict --backend=pkcs11 cryptography/tests/hazmat/primitives/test_hash_vectors.py {posargs}
     coverage run --parallel-mode -m pytest --capture=no --strict --backend=pkcs11 cryptography/tests/hazmat/primitives/test_hmac_vectors.py {posargs}
     coverage run --parallel-mode -m pytest --capture=no --strict --backend=pkcs11 cryptography/tests/hazmat/primitives/test_rsa.py -k"not test_pss_minimum_key_size_for_digest and not test_pss_verify_salt_length_too_long and not test_pss_signing_salt_length_too_long" {posargs}
